# rss_readers

pyqt6/: app.py  pyproject.toml
pyqt6/rss_reader/: appcontext.py  apploader.py  feed.py  feedproviders.py
test_server/: app.py  pyproject.toml  sample.rss
