[tool.poetry]
name = "rss_reader"
version = "0.1.0"
description = ""
authors = ["Dmitry Kostromin <kupec-k@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.8.0"
requests = "^2.32.3"
rss-parser = "^2.1.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
