[tool.poetry]
name = "test-server"
version = "0.1.0"
description = ""
authors = ["Dmitry Kostromin <kupec-k@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
